pushing pickle file 2022

--- a/dataframe_extractor.ipynb
+++ b/dataframe_extractor.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1861,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "506"
       ]
      },
-     "execution_count": 1861,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,15 @@
     "    \"\"\"\n",
     "    This function opens the PDF file in the default PDF viewer.\n",
     "    \"\"\"\n",
-    "    subprocess.Popen(['xdg-open', folder+'/'+file_names[index]])"
+    "    subprocess.Popen(['xdg-open', folder+'/'+file_names[index]])\n",
+    "\n",
+    "def has_duplicates(input_list):\n",
+    "    \"\"\"\n",
+    "    This function checks if a list has repeated elements.\n",
+    "    :param input_list: List of elements to check\n",
+    "    :return: True if there are duplicates, False otherwise\n",
+    "    \"\"\"\n",
+    "    return len(input_list) != len(set(input_list))"
    ]
   },
   {
